* To expose code previously present in SpecialBlock/SpecialUnblock
  to other parts of the code, or to extensions,
  the new BlockUser and UnblockUser command objects were added.
  Use the BlockUserFactory and UnblockUserFactory services to create them.
* The hook UsersPagerDoBatchLookupsHook takes now a \Wikimedia\Rdbms\IDatabase
  instead of \Wikimedia\Rdbms\DBConnRef as first parameter
* …

=== External library changes in 1.36 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* pear/mail_mime was upgraded from 1.10.8 to 1.10.9.
* wikimedia/html-formatter was upgraded from 1.0.2 to 2.0.0.
* Updated OOUI from 0.39.3 to 0.40.4.
* Updated jquery.client from 2.0.2 to 3.0.0.
* Updated guzzlehttp/guzzle from 6.5.4 to 7.0.1.
* Updated pear/net_smtp from 1.9.1 to 1.9.2.
* …

===== Changed development-only external libraries =====
* Updated composer/spdx-licenses from 1.5.3 to 1.5.4.
* doctrine/sql-formatter was upgraded from 1.1.0 to 1.1.1.
* doctrine/dbal was upgraded from 2.10.2 to 2.10.4.
* Updated nikic/php-parser from 4.4.0 to 4.10.0.
* …

==== Removed external libraries ====
* The html5shiv library has been removed, as support for Internet Explorer 8 has
  been dropped.
* …

=== Bug fixes in 1.36 ===
* (T190285) ApiEditPage module used to switch 'undo' and 'undoafter' parameters,
  if it founds you reversed them (based on assumption that higher revision ID
  indicates a later revision). The assumption is not always true and is
  hindering proper edit undoing in some cases, hence the logic has been removed.
  Reversing the paramaters will now lead to edit conflict or undefined behavior.
* …

=== Action API changes in 1.36 ===
* …

=== Action API internal changes in 1.36 ===
* …

=== Languages updated in 1.36 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages